# fieldopsiq

./: Makefile  README.md  pyproject.toml  requirements.txt
deployment/docker/: Dockerfile  Dockerfile.ui  docker-compose.yml
deployment/k8s/: api-deployment.yaml  ollama-ui-deployment.yaml  secrets.example.yaml
docs/adr/: ADR-001-stt-engine-selection.md  ADR-002-llm-structuring-strategy.md  ADR-003-validate-before-queue.md  ADR-004-confidence-thresholds.md  ADR-005-sqlite-edge-storage.md  ADR-006-twelve-factor-config.md  ADR-007-probe-then-sync.md  ADR-008-plain-orchestrator-not-langgraph.md  ADR-009-security-model.md
docs/diagrams/: architecture.md
scripts/: setup.sh
src/api/: dependencies.py  main.py
src/api/middleware/: audit.py  rate_limit.py
src/api/routes/: health.py  jobs.py  sync.py
src/config/: settings.py
src/domain/: constants.py  exceptions.py  schemas.py
src/observability/: logging.py  metrics.py
src/services/: pipeline.py
src/services/llm/: structuring_service.py
src/services/storage/: sqlite_service.py
src/services/stt/: preprocessor.py  whisper_service.py
src/services/sync/: connectivity.py  sync_queue.py
src/ui/: app.py
tests/: conftest.py
tests/e2e/: test_field_recording_journey.py
tests/integration/: test_api_routes.py  test_pipeline_integration.py
tests/unit/: test_connectivity.py  test_preprocessor.py  test_schemas.py  test_storage_service.py  test_structuring_service.py  test_sync_queue.py  test_whisper_service.py
